# Code_stuff2

./: README.md
GRACE/Grace_Code/: CMakeLists.txt
GRACE/Grace_Code/cmake/: CMakeLists_lep4d_patch.cmake  FindBlaze.cmake  FindFFTW.cmake  FindGSL.cmake  FindGoogleBenchmark.cmake  FindKadath.cmake  FindLIBXSMM.cmake  FindLORENE.cmake  FindMKL.cmake  FindOPENBLAS.cmake  FindSCALAPACK.cmake  FindSCICRAY.cmake  FindTwoPunctures.cmake  Findp4est.cmake  check_compiler.cmake  code_modules.cmake  register_grace_object.cmake  register_test.cmake  setup_HDF5.cmake  setup_XDMF.cmake  setup_blas.cmake  setup_blaze.cmake  setup_flags.cmake  setup_googlebenchmark.cmake  setup_gsl.cmake  setup_kokkos.cmake  setup_lapack.cmake  setup_libxsmm.cmake  setup_rocmprofiler.cmake  setup_spdlog.cmake  setup_vtk.cmake  setup_yaml.cmake
GRACE/Grace_Code/configs/: advection_gaussian_pulse.yaml  advection_gaussian_pulse_unigrid.yaml  balsara1.yaml  balsara2.yaml  balsara2_perftest.yaml  basic_bc_test.yaml  basic_config.yaml  bc_test.yaml  bc_test_2.yaml  bc_test_fmr-small.yaml  bc_test_fmr.yaml  bc_test_unigrid.yaml  bns_lorene.yaml  bondi_test.yaml  burgers_N_wave.yaml  burgers_N_wave_profiling.yaml  burgers_double_shocktube.yaml  burgers_gaussian_pulse.yaml  burgers_shocktube.yaml  c2p_test_gamma2.yaml  c2p_test_sly4_pw.yaml  fmtorus.yaml  fmtorus_fmr.yaml  fmtorus_mr.yaml  grmhd_blastwave.yaml  grmhd_shocktube.yaml  grmhd_shocktube_2.yaml  grmhd_shocktube_regression_test.yaml  khi.yaml  m1_curved_beam.yaml  m1_emitting_sphere_test.yaml  m1_moving_scattering_test.yaml  m1_one_zone_cooling.yaml  m1_shadow_test.yaml  m1_static_scattering_test.yaml  m1_straight_beam.yaml  magnetic_rotor.yaml  orszag_tang.yaml  puncture.yaml  pwpoly_test_config.yaml  (+17 more)
GRACE/Grace_Code/doc/: .gitignore  CMakeLists.txt  Doxyfile  conf.py.in  generate_configure_options_table.py.in  generate_rst_file_from_yaml.py.in  grace.doxyfile.in  index.rst  requirements.txt
GRACE/Grace_Code/doc/_doxygen/: doxygen-awesome-grace.css  header.html
GRACE/Grace_Code/doc/_templates/: breadcrumbs.html  layout.html
GRACE/Grace_Code/doc/citing/: index.rst
GRACE/Grace_Code/doc/code_building_guide/: index.rst
GRACE/Grace_Code/doc/code_of_conduct/: index.rst
GRACE/Grace_Code/doc/contributing/: index.rst
GRACE/Grace_Code/doc/gallery/: index.rst
GRACE/Grace_Code/doc/introduction/: index.rst
GRACE/Grace_Code/doc/publications/: index.rst
GRACE/Grace_Code/doc/python_interface/: index.rst
GRACE/Grace_Code/doc/userguide/: .gitignore  index.rst
GRACE/Grace_Code/env/: calea-gnu.sh  calea.sh  goethe.sh  gpu-itp.sh  hawk-cpe-host.sh  raven_gpu.sh  viper-gpu.sh  visu.sh
GRACE/Grace_Code/examples/cowling_grmhd/: A0_cowling.yaml  bondi_accretion.yaml  bondi_accretion_lr.yaml  bondi_accretion_lr_magnetized.yaml  bondi_accretion_lr_rot.yaml  bondi_accretion_magnetized.yaml  magnetic_rotor.yaml
GRACE/Grace_Code/examples/grmhd/: A0_amr.yaml  A0_z4c.yaml  A0_z4c_magnetized.yaml  bns_13vs13_nomag_r125.yaml  bns_13vs13_nomag_r25.yaml  bns_13vs13_nomag_r50.yaml  bns_muons.yaml  bns_neutrinos.yaml  bns_nomag_r125.yaml  bns_nomag_r16.yaml  bns_nomag_r25.yaml  bns_nomag_r50.yaml  sfho_135vs135_B0_r16.yaml  sfho_135vs135_B0_r25.yaml  sfho_135vs135_B0_r50.yaml  sfho_135vs135_B15_r25.yaml  sfho_tov.yaml  sfhx_136vs136_B0_r25.yaml
GRACE/Grace_Code/examples/z4c/: bbh_hr_amr.yaml  bbh_inter2_amr.yaml  bbh_inter_amr.yaml  bbh_lr.yaml  bbh_lr_amr.yaml  bbh_mr.yaml  bbh_mr_amr.yaml  spinning_puncture.yaml
GRACE/Grace_Code/include/grace/: grace_config.h.in
GRACE/Grace_Code/parameters/: IO.yaml  amr.yaml  bh_diagnostics.yaml  checkpoints.yaml  coordinate_system.yaml  eos.yaml  eos_leptonic_4d.yaml  evolution.yaml  grmhd.yaml  gw_integrals.yaml  m1.yaml  ns_tracker.yaml  outflows.yaml  puncture_tracker.yaml  spherical_surfaces.yaml  system.yaml  z4c.yaml
GRACE/Grace_Code/src/: CMakeLists.txt  grace.cpp
GRACE/Grace_Code/src/IO/: CMakeLists.txt  cell_output.cpp  hdf5_output.cpp  hdf5_sphere_output.cpp  hdf5_surface_output.cpp  octree_search_class.cpp  output_diagnostics.cpp  scalar_output.cpp  sphere_interpolator.cpp  spherical_surfaces.cpp  vtk_output.cpp  vtk_output_auxiliaries.cpp  vtk_setup_grid.cpp  vtk_surface_output.cpp  vtk_volume_output.cpp  xmf_utilities.cpp
GRACE/Grace_Code/src/amr/: CMakeLists.txt  amr_functions.cpp  amr_ghosts.cpp  amr_ghosts_construct_buffers.cpp  amr_ghosts_construct_reflux_buffers.cpp  boundary_conditions.cpp  connectivity.cpp  forest.cpp  regrid.cpp
GRACE/Grace_Code/src/config/: CMakeLists.txt  yaml_helpers.cpp
GRACE/Grace_Code/src/coordinates/: CMakeLists.txt  cartesian_coordinate_system.cpp  cell_volume_kernels.cpp  coordinate_systems.cpp  coordinates.cpp  spherical_coordinate_system.cpp
GRACE/Grace_Code/src/data_structures/: CMakeLists.txt  variable_indices.cpp  variable_utils.cpp  variables.cpp
GRACE/Grace_Code/src/errors/: CMakeLists.txt  abort.cc  error.cc  warn.cc
GRACE/Grace_Code/src/evolution/: CMakeLists.txt  auxiliaries.cpp  evolve.cpp  find_stable_timestep.cpp  initial_data.cpp  refluxing.cpp
GRACE/Grace_Code/src/parallel/: CMakeLists.txt  mpi_wrappers.cc
GRACE/Grace_Code/src/physics/: CMakeLists.txt  bssn.cpp  grace_weakhub_setup.cpp  grmhd.cpp  grmhd_lep4d_id.cpp  import_kadath.cpp  m1.cpp
GRACE/Grace_Code/src/profiling/: CMakeLists.txt  gpu_profiling.cpp
GRACE/Grace_Code/src/system/: CMakeLists.txt  checkpoint_handler.cpp  grace_finalize.cpp  grace_initialize.cpp  runtime_functions.cpp
GRACE/Grace_Code/src/utils/: CMakeLists.txt  (+4 more)
GRACE/Grace_Code/test/: CMakeLists.txt  sly.h5  test_bc.cpp  test_bc_unigrid.cpp  test_c2p.cpp  test_connectivities.cc  test_coordinates.cpp  test_eos.cpp  test_errors.cc  test_forest.cpp  test_hdf5_IO.cpp  test_integration.cpp  test_interpolation_on_shere.cpp  test_interpolators.cpp  test_leptonic_4d_eos.cpp  test_metric.cpp  test_new_exchange.cpp  test_output.cpp  test_parallel.cc  test_parser.cc  test_pwpoly_eos.cpp  test_reflux.cpp  test_regridding.cpp  test_sc_wrappers.cpp  test_scalar_reductions.cpp  test_spherical_surface.cpp  test_variable_list.cpp
(+938 files in other folders)
