add_subdirectory(eos)
register_grace_object_conditional(grace_scalar_adv GRACE_ENABLE_SCALAR_ADV scalar_advection.cpp )
register_grace_object_conditional(grace_burgers_eq GRACE_ENABLE_BURGERS burgers_equation.cpp ) 
register_grace_object_conditional(grace_grmhd GRACE_ENABLE_GRMHD grmhd.cpp )
register_grace_object_conditional(grace_bssn GRACE_ENABLE_BSSN_METRIC bssn.cpp)
register_grace_object_conditional(grace_m1 GRACE_ENABLE_M1 m1.cpp ) 
register_grace_object_conditional(grace_kadath GRACE_ENABLE_FUKA import_kadath.cpp )
register_grace_object_conditional(grace_grmhd_lep4d GRACE_ENABLE_LEPTONIC_4D grmhd_lep4d_id.cpp)
if(GRACE_ENABLE_FUKA)
  target_include_directories(grace_kadath PRIVATE ${GSL_INCLUDE_DIR})
  target_include_directories(grace_kadath PRIVATE ${Boost_INCLUDE_DIR})
endif()
